--- a/.gitignore
+++ b/.gitignore
@@ -1,48 +1,56 @@
-# Dependency directories
-node_modules
+# =============================================================================
+# DEPENDENCIES
+# =============================================================================
+node_modules/
 package-lock.json
 
-# Build files
+# =============================================================================
+# BUILD ARTIFACTS
+# =============================================================================
 #dist/
 #build/
 demo/
-dist/page
-src/js/test
-
-# Ignore folders
-dist/assets/world
-
-# Ignore pages
+dist/page/
 dist/page-*
+dist/assets/world/
+src/js/test/
+assets/images/meta/deck/
 
-# Ignore logs
-#logs
+# =============================================================================
+# LOGS & RUNTIME DATA
+# =============================================================================
+#logs/
 *.log
 npm-debug.log*
-
-# Runtime data
 *.pid
 *.pid.lock
 
-# Environment variables
+# =============================================================================
+# ENVIRONMENT FILES
+# =============================================================================
 .env
 .env.local
 
-# IDE and OS files
+# =============================================================================
+# IDE & OS FILES
+# =============================================================================
 .DS_Store
-.vscode
+Thumbs.db
+.vscode/
 *.swp
 *.tmp
-.old
-.vscode/
-Thumbs.db
+*.old
 
-# Ignore SCSS versioned/old variations
+# =============================================================================
+# SCSS VARIATIONS
+# =============================================================================
 *.v[0-9]*.scss
 *.old.scss
 *.wip.scss
 
-# Ignore JS versioned/old variations
+# =============================================================================
+# JS VARIATIONS
+# =============================================================================
 *.v[0-9]*.js
 *.old.js
 *.wip.js
