--- a/.gitignore
+++ b/.gitignore
@@ -8,13 +8,12 @@ package-lock.json
 # BUILD ARTIFACTS
 # =============================================================================
 #dist/
-#build/
 demo/
 dist/page/
 dist/page-*
 dist/assets/world/
+dist/assets/images/meta
 src/js/test/
-assets/images/meta/deck/
 
 # =============================================================================
 # LOGS & RUNTIME DATA
